--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <div class="container" data-aos="fade-right">
     <h2 class="text-center section-title">About Us</h2>
     <p class="text-center">
-      Tony Tech Solution is an MCA student-led initiative focused on creating responsive, user-friendly websites for small businesses and individuals. We specialize in HTML, CSS, JavaScript, and Bootstrap development, bringing simple ideas to life online.
+      ANTHONY  is an MCA student-led initiative focused on creating responsive, user-friendly websites for small businesses and individuals. We specialize in HTML, CSS, JavaScript, and Bootstrap development, bringing simple ideas to life online.
     </p>
   </div>
 </section>
@@ -175,3 +175,4 @@
 </script>
 </body>
 </html>
+
